# voxctl-rust

./: Cargo.toml
backup/: main.rs  serve.rs
src/: _utils.rs  main.rs  serve.rs
src/_utils/: audio.rs  azure.rs  log.rs  playback.rs
