[package]
name = "voxctl"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.3"
reqwest = { version = "0.12.4", features = ["json"] }
rodio = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
